@@ -1,0 +1,7 @@
+[$LOG_ENCODER]
+
+[LogOutput]
+type = "LogOutput"
+message_matcher = "TRUE"
+encoder = "$LOG_ENCODER"
+
