@@ -12,6 +12,8 @@ Bug Handling
 Features
 --------
 
+* Support environment variables in config files (#1023).
+
 0.7.2 (2014-MM-DD)
 ==================
 
